--- a/notebooks/Logistic regresion.ipynb
+++ b/notebooks/Logistic regresion.ipynb
@@ -1,16 +1,199 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "__Introduction__                                                   \n",
+    "We are going to reproduce the [Credit Scoring Algorithm](https://www.kaggle.com/code/willianleite/credit-scoring-algorithm) by Willian Trindade Leite and Gui Gui.  As an outline, our project is split into 2 parts: \n",
+    "1. Logistics Regression\n",
+    "2. K-Nearest Neighbor"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Logistics Regression**\n",
+    "\n",
+    "In this notebook, we focus on reproducing the results of the Credit Scoring Algorithm  with Logistic Regression. We will use the same model evaluation metrics as in the original research and compare the results.\n",
+    "In this reproduction, we will focus on the comparison of the model with **non-standardized and standardized** data.\n",
+    "The procedure is as follows:\n",
+    "1. Prepare the date for modelling purpose\n",
+    "2. Split the data into train and test sets\n",
+    "3. Fit the models on the train set **non-standardized and standardized** data\n",
+    "4. Calculate evaluation metrics **non-standardized and standardized** data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Default</th>\n",
+       "      <th>duration</th>\n",
+       "      <th>amount</th>\n",
+       "      <th>installment</th>\n",
+       "      <th>residence</th>\n",
+       "      <th>age</th>\n",
+       "      <th>cards</th>\n",
+       "      <th>liable</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>6</td>\n",
+       "      <td>1169</td>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "      <td>67</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>48</td>\n",
+       "      <td>5951</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>22</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0</td>\n",
+       "      <td>12</td>\n",
+       "      <td>2096</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>49</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0</td>\n",
+       "      <td>42</td>\n",
+       "      <td>7882</td>\n",
+       "      <td>2</td>\n",
+       "      <td>4</td>\n",
+       "      <td>45</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1</td>\n",
+       "      <td>24</td>\n",
+       "      <td>4870</td>\n",
+       "      <td>3</td>\n",
+       "      <td>4</td>\n",
+       "      <td>53</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Default  duration  amount  installment  residence  age  cards  liable\n",
+       "0        0         6    1169            4          4   67      2       1\n",
+       "1        1        48    5951            2          2   22      1       1\n",
+       "2        0        12    2096            2          3   49      1       2\n",
+       "3        0        42    7882            2          4   45      1       2\n",
+       "4        1        24    4870            3          4   53      2       2"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Import the libraries for modelling purpose\n",
+    "import pandas as pd\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "import numpy as np\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "import statsmodels.api as sm\n",
+    "from sklearn.metrics import roc_curve\n",
+    "import matplotlib.pyplot as plt\n",
+    "from sklearn.metrics import confusion_matrix\n",
+    "from sklearn.metrics import roc_curve, auc\n",
+    "#Read data from .csv file\n",
+    "data=pd.read_csv(\"/Users/elgun/Desktop/Reproducible-Research_Project/data/Credit.csv\")\n",
+    "credit=data.copy()\n",
+    "#Drop the non-numerical columns\n",
+    "credit=credit.drop(columns=[\"checkingstatus1\",\"history\",\"purpose\",\"savings\",\"employ\",\"sex\",\"housing\",\"tele\",\"foreign\",\"Unnamed: 0\"],axis=1)\n",
+    "#Inspect the dataframe\n",
+    "credit.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Split the data into train and test sets**\n",
+    "\n",
+    "75% of the data was used for training in the original research. In this project,  70% of the data was used for training."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Splitting data into features (X) and target (y)\n",
+    "X = credit.drop(columns=['Default'])\n",
+    "y = credit['Default']\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, train_size=0.70, random_state=42)"
+   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.0"
   }
  },
  "nbformat": 4,
