--- a/notebooks/Logistic regresion.ipynb
+++ b/notebooks/Logistic regresion.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 124,
    "metadata": {},
    "outputs": [
     {
@@ -130,7 +130,7 @@
        "4        1        24    4870            3          4   53      2       2"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 124,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -166,14 +166,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 125,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Splitting data into features (X) and target (y)\n",
     "X = credit.drop(columns=['Default'])\n",
     "y = credit['Default']\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, train_size=0.70, random_state=42)"
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, train_size=0.70, random_state=42)\n",
+    "X_train_origin, X_test_origin, y_train_origin, y_test_origin = train_test_split(X, y, train_size=0.75, random_state=42)"
    ]
   },
   {
@@ -187,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 126,
    "metadata": {},
    "outputs": [
     {
@@ -196,6 +197,9 @@
      "text": [
       "Optimization terminated successfully.\n",
       "         Current function value: 0.574276\n",
+      "         Iterations 5\n",
+      "Optimization terminated successfully.\n",
+      "         Current function value: 0.579776\n",
       "         Iterations 5\n"
      ]
     },
@@ -217,7 +221,7 @@
        "  <th>Date:</th>            <td>Mon, 03 Jun 2024</td> <th>  Pseudo R-squ.:     </th>  <td>0.05802</td> \n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Time:</th>                <td>15:11:57</td>     <th>  Log-Likelihood:    </th> <td> -401.99</td> \n",
+       "  <th>Time:</th>                <td>16:26:59</td>     <th>  Log-Likelihood:    </th> <td> -401.99</td> \n",
        "</tr>\n",
        "<tr>\n",
        "  <th>converged:</th>             <td>True</td>       <th>  LL-Null:           </th> <td> -426.75</td> \n",
@@ -264,7 +268,7 @@
        "\\textbf{Model:}           &      Logit       & \\textbf{  Df Residuals:      } &      692    \\\\\n",
        "\\textbf{Method:}          &       MLE        & \\textbf{  Df Model:          } &        7    \\\\\n",
        "\\textbf{Date:}            & Mon, 03 Jun 2024 & \\textbf{  Pseudo R-squ.:     } &  0.05802    \\\\\n",
-       "\\textbf{Time:}            &     15:11:57     & \\textbf{  Log-Likelihood:    } &   -401.99   \\\\\n",
+       "\\textbf{Time:}            &     16:26:59     & \\textbf{  Log-Likelihood:    } &   -401.99   \\\\\n",
        "\\textbf{converged:}       &       True       & \\textbf{  LL-Null:           } &   -426.75   \\\\\n",
        "\\textbf{Covariance Type:} &    nonrobust     & \\textbf{  LLR p-value:       } & 1.793e-08   \\\\\n",
        "\\bottomrule\n",
@@ -294,7 +298,7 @@
        "Model:                          Logit   Df Residuals:                      692\n",
        "Method:                           MLE   Df Model:                            7\n",
        "Date:                Mon, 03 Jun 2024   Pseudo R-squ.:                 0.05802\n",
-       "Time:                        15:11:57   Log-Likelihood:                -401.99\n",
+       "Time:                        16:26:59   Log-Likelihood:                -401.99\n",
        "converged:                       True   LL-Null:                       -426.75\n",
        "Covariance Type:            nonrobust   LLR p-value:                 1.793e-08\n",
        "===============================================================================\n",
@@ -312,7 +316,7 @@
        "\"\"\""
       ]
      },
-     "execution_count": 3,
+     "execution_count": 126,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -320,13 +324,142 @@
    "source": [
     "# Fit logistic regression model\n",
     "lrn = sm.Logit(y_train, sm.add_constant(X_train)).fit()\n",
+    "lrn_origin = sm.Logit(y_train_origin, sm.add_constant(X_train_origin)).fit()\n",
     "# Print summary\n",
     "lrn.summary()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 127,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table class=\"simpletable\">\n",
+       "<caption>Logit Regression Results</caption>\n",
+       "<tr>\n",
+       "  <th>Dep. Variable:</th>        <td>Default</td>     <th>  No. Observations:  </th>  <td>   750</td>  \n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Model:</th>                 <td>Logit</td>      <th>  Df Residuals:      </th>  <td>   742</td>  \n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Method:</th>                 <td>MLE</td>       <th>  Df Model:          </th>  <td>     7</td>  \n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Date:</th>            <td>Mon, 03 Jun 2024</td> <th>  Pseudo R-squ.:     </th>  <td>0.05607</td> \n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Time:</th>                <td>16:26:59</td>     <th>  Log-Likelihood:    </th> <td> -434.83</td> \n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>converged:</th>             <td>True</td>       <th>  LL-Null:           </th> <td> -460.66</td> \n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Covariance Type:</th>     <td>nonrobust</td>    <th>  LLR p-value:       </th> <td>6.817e-09</td>\n",
+       "</tr>\n",
+       "</table>\n",
+       "<table class=\"simpletable\">\n",
+       "<tr>\n",
+       "       <td></td>          <th>coef</th>     <th>std err</th>      <th>z</th>      <th>P>|z|</th>  <th>[0.025</th>    <th>0.975]</th>  \n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>const</th>       <td>   -1.2000</td> <td>    0.503</td> <td>   -2.388</td> <td> 0.017</td> <td>   -2.185</td> <td>   -0.215</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>duration</th>    <td>    0.0191</td> <td>    0.009</td> <td>    2.129</td> <td> 0.033</td> <td>    0.002</td> <td>    0.037</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>amount</th>      <td>  9.51e-05</td> <td> 3.72e-05</td> <td>    2.556</td> <td> 0.011</td> <td> 2.22e-05</td> <td>    0.000</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>installment</th> <td>    0.1941</td> <td>    0.082</td> <td>    2.361</td> <td> 0.018</td> <td>    0.033</td> <td>    0.355</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>residence</th>   <td>    0.0906</td> <td>    0.078</td> <td>    1.162</td> <td> 0.245</td> <td>   -0.062</td> <td>    0.244</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>age</th>         <td>   -0.0337</td> <td>    0.009</td> <td>   -3.898</td> <td> 0.000</td> <td>   -0.051</td> <td>   -0.017</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>cards</th>       <td>   -0.1769</td> <td>    0.151</td> <td>   -1.174</td> <td> 0.241</td> <td>   -0.472</td> <td>    0.118</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>liable</th>      <td>    0.1612</td> <td>    0.241</td> <td>    0.668</td> <td> 0.504</td> <td>   -0.312</td> <td>    0.634</td>\n",
+       "</tr>\n",
+       "</table>"
+      ],
+      "text/latex": [
+       "\\begin{center}\n",
+       "\\begin{tabular}{lclc}\n",
+       "\\toprule\n",
+       "\\textbf{Dep. Variable:}   &     Default      & \\textbf{  No. Observations:  } &      750    \\\\\n",
+       "\\textbf{Model:}           &      Logit       & \\textbf{  Df Residuals:      } &      742    \\\\\n",
+       "\\textbf{Method:}          &       MLE        & \\textbf{  Df Model:          } &        7    \\\\\n",
+       "\\textbf{Date:}            & Mon, 03 Jun 2024 & \\textbf{  Pseudo R-squ.:     } &  0.05607    \\\\\n",
+       "\\textbf{Time:}            &     16:26:59     & \\textbf{  Log-Likelihood:    } &   -434.83   \\\\\n",
+       "\\textbf{converged:}       &       True       & \\textbf{  LL-Null:           } &   -460.66   \\\\\n",
+       "\\textbf{Covariance Type:} &    nonrobust     & \\textbf{  LLR p-value:       } & 6.817e-09   \\\\\n",
+       "\\bottomrule\n",
+       "\\end{tabular}\n",
+       "\\begin{tabular}{lcccccc}\n",
+       "                     & \\textbf{coef} & \\textbf{std err} & \\textbf{z} & \\textbf{P$> |$z$|$} & \\textbf{[0.025} & \\textbf{0.975]}  \\\\\n",
+       "\\midrule\n",
+       "\\textbf{const}       &      -1.2000  &        0.503     &    -2.388  &         0.017        &       -2.185    &       -0.215     \\\\\n",
+       "\\textbf{duration}    &       0.0191  &        0.009     &     2.129  &         0.033        &        0.002    &        0.037     \\\\\n",
+       "\\textbf{amount}      &     9.51e-05  &     3.72e-05     &     2.556  &         0.011        &     2.22e-05    &        0.000     \\\\\n",
+       "\\textbf{installment} &       0.1941  &        0.082     &     2.361  &         0.018        &        0.033    &        0.355     \\\\\n",
+       "\\textbf{residence}   &       0.0906  &        0.078     &     1.162  &         0.245        &       -0.062    &        0.244     \\\\\n",
+       "\\textbf{age}         &      -0.0337  &        0.009     &    -3.898  &         0.000        &       -0.051    &       -0.017     \\\\\n",
+       "\\textbf{cards}       &      -0.1769  &        0.151     &    -1.174  &         0.241        &       -0.472    &        0.118     \\\\\n",
+       "\\textbf{liable}      &       0.1612  &        0.241     &     0.668  &         0.504        &       -0.312    &        0.634     \\\\\n",
+       "\\bottomrule\n",
+       "\\end{tabular}\n",
+       "%\\caption{Logit Regression Results}\n",
+       "\\end{center}"
+      ],
+      "text/plain": [
+       "<class 'statsmodels.iolib.summary.Summary'>\n",
+       "\"\"\"\n",
+       "                           Logit Regression Results                           \n",
+       "==============================================================================\n",
+       "Dep. Variable:                Default   No. Observations:                  750\n",
+       "Model:                          Logit   Df Residuals:                      742\n",
+       "Method:                           MLE   Df Model:                            7\n",
+       "Date:                Mon, 03 Jun 2024   Pseudo R-squ.:                 0.05607\n",
+       "Time:                        16:26:59   Log-Likelihood:                -434.83\n",
+       "converged:                       True   LL-Null:                       -460.66\n",
+       "Covariance Type:            nonrobust   LLR p-value:                 6.817e-09\n",
+       "===============================================================================\n",
+       "                  coef    std err          z      P>|z|      [0.025      0.975]\n",
+       "-------------------------------------------------------------------------------\n",
+       "const          -1.2000      0.503     -2.388      0.017      -2.185      -0.215\n",
+       "duration        0.0191      0.009      2.129      0.033       0.002       0.037\n",
+       "amount        9.51e-05   3.72e-05      2.556      0.011    2.22e-05       0.000\n",
+       "installment     0.1941      0.082      2.361      0.018       0.033       0.355\n",
+       "residence       0.0906      0.078      1.162      0.245      -0.062       0.244\n",
+       "age            -0.0337      0.009     -3.898      0.000      -0.051      -0.017\n",
+       "cards          -0.1769      0.151     -1.174      0.241      -0.472       0.118\n",
+       "liable          0.1612      0.241      0.668      0.504      -0.312       0.634\n",
+       "===============================================================================\n",
+       "\"\"\""
+      ]
+     },
+     "execution_count": 127,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Print summary\n",
+    "lrn_origin.summary()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 128,
    "metadata": {},
    "outputs": [
     {
@@ -335,7 +468,7 @@
        "819.987038400438"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 128,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -343,6 +476,34 @@
    "source": [
     "# Calculation AIC \n",
     "lrn.aic"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 129,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "885.6647465079642"
+      ]
+     },
+     "execution_count": 129,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Calculation AIC \n",
+    "lrn_origin.aic"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We use the same train-test split with the original research for reproducing, but our model **aic score** is better than the original one again. We do not make the same experiment for standardized data because the results are almost the same."
    ]
   },
   {
@@ -354,7 +515,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 130,
    "metadata": {},
    "outputs": [
     {
@@ -451,7 +612,7 @@
        "616  0.617833        0"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 130,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -484,7 +645,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 131,
    "metadata": {},
    "outputs": [
     {
@@ -527,7 +688,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 132,
    "metadata": {},
    "outputs": [
     {
@@ -586,7 +747,7 @@
        "2       0.60     6.593407    99.521531"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 132,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -635,7 +796,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 133,
    "metadata": {},
    "outputs": [
     {
@@ -690,7 +851,7 @@
        "2       0.60                               0.713333"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 133,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -727,7 +888,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 134,
    "metadata": {},
    "outputs": [
     {
@@ -757,7 +918,7 @@
        "  <th>Date:</th>            <td>Mon, 03 Jun 2024</td> <th>  Pseudo R-squ.:     </th>  <td>0.05802</td> \n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Time:</th>                <td>15:11:58</td>     <th>  Log-Likelihood:    </th> <td> -401.99</td> \n",
+       "  <th>Time:</th>                <td>16:26:59</td>     <th>  Log-Likelihood:    </th> <td> -401.99</td> \n",
        "</tr>\n",
        "<tr>\n",
        "  <th>converged:</th>             <td>True</td>       <th>  LL-Null:           </th> <td> -426.75</td> \n",
@@ -804,7 +965,7 @@
        "\\textbf{Model:}           &      Logit       & \\textbf{  Df Residuals:      } &      692    \\\\\n",
        "\\textbf{Method:}          &       MLE        & \\textbf{  Df Model:          } &        7    \\\\\n",
        "\\textbf{Date:}            & Mon, 03 Jun 2024 & \\textbf{  Pseudo R-squ.:     } &  0.05802    \\\\\n",
-       "\\textbf{Time:}            &     15:11:58     & \\textbf{  Log-Likelihood:    } &   -401.99   \\\\\n",
+       "\\textbf{Time:}            &     16:26:59     & \\textbf{  Log-Likelihood:    } &   -401.99   \\\\\n",
        "\\textbf{converged:}       &       True       & \\textbf{  LL-Null:           } &   -426.75   \\\\\n",
        "\\textbf{Covariance Type:} &    nonrobust     & \\textbf{  LLR p-value:       } & 1.793e-08   \\\\\n",
        "\\bottomrule\n",
@@ -834,7 +995,7 @@
        "Model:                          Logit   Df Residuals:                      692\n",
        "Method:                           MLE   Df Model:                            7\n",
        "Date:                Mon, 03 Jun 2024   Pseudo R-squ.:                 0.05802\n",
-       "Time:                        15:11:58   Log-Likelihood:                -401.99\n",
+       "Time:                        16:26:59   Log-Likelihood:                -401.99\n",
        "converged:                       True   LL-Null:                       -426.75\n",
        "Covariance Type:            nonrobust   LLR p-value:                 1.793e-08\n",
        "===============================================================================\n",
@@ -852,7 +1013,7 @@
        "\"\"\""
       ]
      },
-     "execution_count": 9,
+     "execution_count": 134,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -872,7 +1033,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 135,
    "metadata": {},
    "outputs": [
     {
@@ -881,7 +1042,7 @@
        "819.987038400438"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 135,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -900,7 +1061,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 136,
    "metadata": {},
    "outputs": [
     {
@@ -997,7 +1158,7 @@
        "616  0.617833        0"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 136,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1030,7 +1191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 137,
    "metadata": {},
    "outputs": [
     {
@@ -1072,7 +1233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 138,
    "metadata": {},
    "outputs": [
     {
@@ -1131,7 +1292,7 @@
        "2       0.60     6.593407    99.521531"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 138,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1180,7 +1341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 139,
    "metadata": {},
    "outputs": [
     {
@@ -1235,7 +1396,7 @@
        "2       0.60                               0.713333"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 139,
      "metadata": {},
      "output_type": "execute_result"
     }
