--- a/notebooks/KNN-Reproduce.ipynb
+++ b/notebooks/KNN-Reproduce.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 26,
    "id": "42532b51",
    "metadata": {},
    "outputs": [],
@@ -52,32 +52,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "id": "608687ea",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Set random seed for reproducibility\n",
     "seed = 42\n",
-    "np.random.seed(seed)\n",
-    "random.seed(seed)"
+    "np.random.seed(seed)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 28,
    "id": "40e0c0f3",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Read data from .csv file\n",
-    "data=pd.read_csv(r\"C:\\Users\\USER\\Desktop\\CreditScoreAnalysis\\CSA_Repositories\\Reproducible-Research_Project\\data\\Credit.csv\")\n",
+    "data=pd.read_csv(\"/Users/elgun/Desktop/Reproducible-Research_Project/data/Credit.csv\")\n",
     "credit=data.copy()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 29,
    "id": "34975afe",
    "metadata": {},
    "outputs": [],
@@ -89,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 30,
    "id": "7ebd18bf",
    "metadata": {},
    "outputs": [],
@@ -101,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 31,
    "id": "fb0f370e",
    "metadata": {},
    "outputs": [],
@@ -113,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 32,
    "id": "efda15ad",
    "metadata": {},
    "outputs": [],
@@ -124,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 33,
    "id": "3656d840",
    "metadata": {},
    "outputs": [
@@ -149,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 34,
    "id": "65e4492e",
    "metadata": {},
    "outputs": [],
@@ -160,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 35,
    "id": "983296bd",
    "metadata": {},
    "outputs": [],
@@ -172,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 36,
    "id": "6e8c8be8",
    "metadata": {},
    "outputs": [],
@@ -188,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 37,
    "id": "fc274929",
    "metadata": {},
    "outputs": [
@@ -218,17 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
-   "id": "ec2a5601",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from sklearn.model_selection import cross_val_score"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 38,
    "id": "f7106fbd",
    "metadata": {},
    "outputs": [],
@@ -239,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 39,
    "id": "257cb15f",
    "metadata": {},
    "outputs": [],
@@ -252,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 40,
    "id": "188d33f2",
    "metadata": {},
    "outputs": [
@@ -287,14 +276,6 @@
    "source": [
     "The results are similar but not identical to the original model"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8bbf9356",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -313,7 +294,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.12.0"
   }
  },
  "nbformat": 4,
